#
# This file is part of eyeo Chromium SDK,
# Copyright (C) 2006-present eyeo GmbH
#
# eyeo Chromium SDK is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License version 3 as
# published by the Free Software Foundation.
#
# eyeo Chromium SDK is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with eyeo Chromium SDK.  If not, see <http://www.gnu.org/licenses/>.

source_set("browser_impl") {
  visibility = [
    ":*",
    "//components/adblock/content:*",
  ]
  sources = [
    "adblock_content_utils.cc",
    "adblock_content_utils.h",
    "adblock_webcontents_observer.cc",
    "adblock_webcontents_observer.h",
    "content_security_policy_injector.h",
    "content_security_policy_injector_impl.cc",
    "content_security_policy_injector_impl.h",
    "element_hider.h",
    "element_hider_impl.cc",
    "element_hider_impl.h",
    "frame_hierarchy_builder.cc",
    "frame_hierarchy_builder.h",
    "resource_classification_runner.h",
    "resource_classification_runner_impl.cc",
    "resource_classification_runner_impl.h",
    "session_stats_impl.cc",
    "session_stats_impl.h",
  ]

  deps = [
    "//base",
    "//url:url",
  ]

  public_deps = [
    "//components/adblock/content/common/mojom:adblock_interfaces",
    "//components/adblock/core",
    "//content/public/browser",
  ]
}

source_set("test_support") {
  testonly = true
  sources = [
    "test/mock_adblock_content_security_policy_injector.cc",
    "test/mock_adblock_content_security_policy_injector.h",
    "test/mock_element_hider.cc",
    "test/mock_element_hider.h",
    "test/mock_frame_hierarchy_builder.cc",
    "test/mock_frame_hierarchy_builder.h",
    "test/mock_resource_classification_runner.cc",
    "test/mock_resource_classification_runner.h",
  ]

  public_deps = [
    ":browser_impl",
    "//testing/gmock",
    "//testing/gtest",
  ]
}

source_set("unit_tests") {
  testonly = true
  sources = [
    "test/adblock_content_utils_test.cc",
    "test/adblock_webcontents_observer_test.cc",
    "test/content_security_policy_injector_impl_test.cc",
    "test/element_hider_impl_test.cc",
    "test/frame_hierarchy_builder_test.cc",
    "test/resource_classification_runner_impl_test.cc",
    "test/session_stats_impl_test.cc",
  ]

  deps = [
    ":test_support",
    "//base/test:test_support",
    "//components/adblock/core:test_support",
    "//components/adblock/core/classifier:test_support",
    "//components/adblock/core/subscription:test_support",
    "//components/prefs:test_support",
    "//components/sync_preferences:test_support",
    "//content/test:test_support",
    "//net:test_support",
    "//services/network:test_support",
  ]
}
