# This file is part of eyeo Chromium SDK,
# Copyright (C) 2006-present eyeo GmbH
# eyeo Chromium SDK is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License version 3 as
# published by the Free Software Foundation.
# eyeo Chromium SDK is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# You should have received a copy of the GNU General Public License
# along with eyeo Chromium SDK.  If not, see <http://www.gnu.org/licenses/>.

source_set("classifier") {
  sources = [
    "resource_classifier.cc",
    "resource_classifier.h",
    "resource_classifier_impl.cc",
    "resource_classifier_impl.h",
  ]

  public_deps = [
    "//base",
    "//components/adblock/core/subscription:subscription",
    "//components/adblock/core/common",
    "//net:net",
    "//url:url",
  ]
}

source_set("test_support") {
  testonly = true
  sources = [
    "test/mock_resource_classifier.cc",
    "test/mock_resource_classifier.h",
  ]

  deps = [
    ":classifier",
    "//testing/gmock",
    "//testing/gtest",
  ]
}

source_set("unit_tests") {
  testonly = true
  sources = [
    "test/resource_classifier_impl_test.cc",
  ]

  deps = [
    ":test_support",
    "//components/adblock/core",
    "//components/adblock/core/subscription:test_support",
    "//net:test_support",
    "//testing/gtest",
  ]
}

source_set("perf_tests") {
  testonly = true
  sources = [
    "test/resource_classifier_perftest.cc",
  ]

  deps = [
    ":classifier",
    "//components/adblock/core/converter",
    "//testing/gtest",
  ]

  data = [
    "//components/test/data/adblock/easylist.txt",
    "//components/test/data/adblock/exceptionrules.txt",
    "//components/test/data/adblock/anticv.txt",
    "//components/test/data/adblock/longurl.txt",
  ]
}
